<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:columnCount="16"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
<!--android:columnCount=""  指定网格布局使用的列数-->

<!-- android:layout_row="N"  指定从第N行开始
     android:layout_column="N"  指定从第N列开始
     android:layout_columnSpan="N"  指定该视图跨N列
     android:layout_gravity="N"  指定该试图位置
     android:textStyle="bold"  加粗文字-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="16"
        android:layout_gravity="left"
        android:text="@string/globle_params_setting"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:text="@string/server_address"/>
<!--android:ems="N"  指定该控件宽度为N个字符宽度
    android:hint=""  输入内容之前的提示内容-->
    <EditText
        android:id="@+id/et_server_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="5"
        android:layout_columnSpan="11"
        android:ems="11"
        android:text="http://api.nlecloud.com"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:text="@string/cloud_project_label"/>
    <EditText
        android:id="@+id/et_project_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="5"
        android:layout_columnSpan="11"
        android:ems="11"
        android:text="86423"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:text="@string/cloud_account"/>
    <EditText
        android:id="@+id/et_cloud_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="5"
        android:layout_columnSpan="11"
        android:ems="11"
        android:text="15852701623"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:text="@string/cloud_account_password"/>
    <EditText
        android:id="@+id/et_cloud_account_passwprd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="5"
        android:layout_columnSpan="11"
        android:ems="11"
        android:inputType="textPassword"
        android:text="123456"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="16"
        android:layout_gravity="left"
        android:paddingTop="10dp"
        android:text="@string/camera_address_setting"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/camera_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:text="@string/camera_address"/>
    <EditText
        android:id="@+id/et_camera_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="6"
        android:layout_columnSpan="10"
        android:ems="11"
        android:text="192.168.0.1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="16"
        android:layout_gravity="left"
        android:paddingTop="10dp"
        android:text="@string/sensor_actuator_setting"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/wd_id"/>
    <EditText
        android:id="@+id/et_wd_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="4"
        android:layout_columnSpan="4"
        android:ems="3"
        android:text="zt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="8"
        android:layout_columnSpan="2"
        android:text="@string/wd_yz"/>
    <EditText
        android:id="@+id/et_wd_yz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="10"
        android:layout_columnSpan="6"
        android:ems="4"
        android:text="30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/sd_id"/>
    <EditText
        android:id="@+id/et_sd_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="4"
        android:layout_columnSpan="4"
        android:ems="3"
        android:text="zh"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="8"
        android:layout_columnSpan="2"
        android:text="@string/sd_yz"/>
    <EditText
        android:id="@+id/et_sd_yz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="10"
        android:layout_columnSpan="6"
        android:ems="4"
        android:text="70"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/gz_id"/>
    <EditText
        android:id="@+id/et_gz_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="4"
        android:layout_columnSpan="4"
        android:ems="3"
        android:text="zl"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="8"
        android:layout_columnSpan="2"
        android:text="@string/gz_yz"/>
    <EditText
        android:id="@+id/et_gz_yz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="10"
        android:layout_columnSpan="6"
        android:ems="4"
        android:text="1000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/rt_id"/>

    <EditText
        android:id="@+id/et_rt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="6"
        android:layout_columnSpan="4"
        android:ems="3"
        android:text="zb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="8"
        android:layout_columnSpan="4"
        android:text="@string/gz_kz_id"/>
    <EditText
        android:id="@+id/et_gzkz_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="12"
        android:layout_columnSpan="4"
        android:ems="3"
        android:text="ml"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:text="@string/tf_kz_id"/>
    <EditText
        android:id="@+id/et_tfkz_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="5"
        android:layout_columnSpan="2"
        android:ems="3"
        android:text="mf1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="7"
        android:layout_columnSpan="5"
        android:text="@string/kt_kz_id"/>
    <EditText
        android:id="@+id/et_ktkz_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="12"
        android:layout_columnSpan="4"
        android:ems="3"
        android:text="mf2"/>
    <Button
        android:id="@+id/bt_qjcs"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_row="13"
        android:layout_column="0"
        android:layout_columnSpan="16"
        android:layout_rowSpan="2"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_stytle"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bccs"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:onClick="onClickSave"/>
<!--    <TextView-->
<!--        android:id="@+id/tv_wdz"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="" />-->

</GridLayout>